# domain/order/handler/http_handler/create_order_bulk.go
@@ -11,6 +11,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// swagger:parameters CreateOrderBulkHeader
+type SwaggerCreateOrderBulk struct {
+	// in: header
+	// required: true
+	// example: JWT eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+	Authorization string
+}
+
 func (h *handler) CreateOrderBulk(ctx *gin.Context) {
 	select {
 	case <-ctx.Done():
