# route/order.go
@@ -24,8 +24,40 @@ func SetupOrderRouter(r *gin.Engine, cfg *config.Config) {
 	httpHandler := http_handler.NewNotificationHandler(orderGrpcService)
 
 	routes := r.Group("/order")
+
+	// swagger:route GET /order/products-by-keyword Order GetProductsToOrderByKeywordQuery
+	//
+	// Get products from bukalapak
+	//
+	// Responses:
+	//  200: GetProductsToOrderResponse
+	//  400: swaggerResponse
 	routes.GET("/products-by-keyword", httpHandler.GetProductsToOrderByKeyword)
+
+	// swagger:route GET /order/detail-product Order GetDetailProductsQuery
+	//
+	// Get product detail
+	//
+	// Responses:
+	//  200: GetDetailProductsResponse
+	//  400: swaggerResponse
 	routes.GET("/detail-product", httpHandler.GetDetailProducts)
+
+	// swagger:route POST /order Order CreateOrderPayload
+	//
+	// Create single order
+	//
+	// Responses:
+	//  200: swaggerResponse
+	//  400: swaggerResponse
 	routes.POST("/", httpHandler.CreateOrder)
+
+	// swagger:route POST /order/bulk Order CreateOrderBulkHeader
+	//
+	// Create bulk order
+	//
+	// Responses:
+	//  200: swaggerResponse
+	//  400: swaggerResponse
 	routes.POST("/bulk", httpHandler.CreateOrderBulk)
 }
